- Fixed bug #43137 (rmdir() and rename() do not clear statcache)